# discord-ext-audiorec

./: .gitignore  Cargo.toml  Dockerfile.manylinux_2014  Dockerfile.manylinux_2_24  Dockerfile.manylinux_i686  Dockerfile.manylinux_x86_64  LICENSE  MANIFEST.in  Makefile.toml  README.rst  build-wheels.sh  mypy.ini  prebuild.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml
discord/ext/audiorec/: __init__.py  ffi.pyi  voice_client.py
docs/: conf.py  index.rst  installation.rst  modules.rst  usage.rst
examples/: basic_voice.py  voice_record.py
src/: connection.rs  error.rs  futures.rs  lib.rs  payload.rs  player.rs  recorder.rs  state.rs  ws.rs
tests/: test_connect.py
