[package]
name = "discord-ext-audiorec"
version = "0.1.0"
authors = ["Tomoya Ishii <shi2gx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.40"
thiserror = "1.0.24"
rustls = "0.19.1"
pyo3-log = "0.3.0"
log = "0.4.14"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = { version = "1.0.64", features = ["raw_value"] }
bitflags = "1.2.1"
smart-default = "0.6.0"
parking_lot = "0.11.1"
serde_with = { version = "1.8.1", features = ["json"] }
xsalsa20poly1305 = { version = "0.6.0", features = ["heapless"] }
audiopus = "0.2.0"
rtp-rs = "0.5.0"
rand = "0.8.3"
webpki = { version = "=0.21.4" }
webpki-roots = "=0.21.1"

[dependencies.tungstenite]
version = "0.13.0"
default-features = false
features = ["rustls-tls"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[dev-dependencies.pyo3]
version = "0.13.2"
features = ["auto-initialize"]
